# Test-1

./: CMakeLists.txt  CustomDot.qml  Main.qml  NavigationItem.ui.qml  NavigationScreen.ui.qml  main.cpp  speedometer.cpp  speedometer.h
